[tool.poetry]
name = "fl-ns3"
version = "0.1.0"
description = ""
authors = ["Hao123br <carlosh2340@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.1"
tensorflow = "^2.19.0"
tensorflow-datasets = "^4.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
